--- a/src/main/resources/static/tree.html
+++ b/src/main/resources/static/tree.html
@@ -1,7 +1,7 @@
 <html>
 <head></head>
 <body>
-    <div class="CategoryTreeSection">
+    <div id="root_node" class="CategoryTreeSection">
         <div class="CategoryTreeItem">
             <span class="CategoryTreeBullet">
                 <span class="CategoryTreeToggle CategoryTreeToggleHandlerAttached" data-ct-title="Medicine"
