--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -86,39 +86,41 @@
         Category Tree
       </h4>
       <hr>
-      <ul class="list-group">
-        <li class="list-group-item">
-          <h3>
-            Level 1
-          </h3>
+      <div id="categoryList">
+        <!--<ul class="list-group">
+          <li class="list-group-item">
+            <h3>
+              Level 1
+            </h3>
 
-          <ul class="list-group">
-            <li class="list-group-item">
-              <h4>
-                Level 2.1
-              </h4>
+            <ul class="list-group">
+              <li class="list-group-item">
+                <h4>
+                  Level 2.1
+                </h4>
 
-              <ul class="list-group">
-                <li class="list-group-item">
-                  Item 2.1.1
-                </li>
-                <li class="list-group-item">
-                  Item 2.1.2
-                </li>
-                <li class="list-group-item">
-                  Item 2.1.3
-                </li>
-              </ul>
-            </li>
+                <ul class="list-group">
+                  <li class="list-group-item">
+                    Item 2.1.1
+                  </li>
+                  <li class="list-group-item">
+                    Item 2.1.2
+                  </li>
+                  <li class="list-group-item">
+                    Item 2.1.3
+                  </li>
+                </ul>
+              </li>
 
-            <li class="list-group-item">
-              <h4>
-                Level 2.2
-              </h4>
-            </li>
-          </ul>
-        </li>
-      </ul>
+              <li class="list-group-item">
+                <h4>
+                  Level 2.2
+                </h4>
+              </li>
+            </ul>
+          </li>
+        </ul>-->
+      </div>
     </div>
   </div>
 
